--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-Webapp/frontend/build/
+# Webapp/frontend/build/
 
 # IDE
 .vscode/
