--- a/Webapp/.env
+++ b/Webapp/.env
@@ -6,3 +6,13 @@ OPENROUTER_SITE_URL=https://your-site-url.com
 OPENROUTER_SITE_TITLE=Your App Name
 
 GOOGLE_CLIENT_ID=375770889302-3n2tpr49r8bd8on2l14fnnvm9uu0e6gk.apps.googleusercontent.com
+
+
+
+# Get these from Azure Portal -> App Registrations (for micrsoft login)
+REACT_APP_MICROSOFT_CLIENT_ID=8b284ed1-bf75-4387-8a9b-90e116386b64
+REACT_APP_MICROSOFT_TENANT_ID=d0feabc3-0fc8-42d3-ab77-1778ed207d3b
+
+# Authorized emails for Chatbot Login (comma separated)
+USER_WHITELIST=Jesselitwinpdx@gmail.com
+ADMIN_LIST=Jesselitwinpdx@gmail.com
