--- a/Project/Parse/Procfile
+++ b/Project/Parse/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn --timeout 300 --workers 1 --bind 0.0.0.0:$PORT Project.Parse.databaseAccess:app
+gunicorn wsgi:app --bind 0.0.0.0:$PORT --workers 1 --timeout 120
