--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: "bash build.sh"
-    startCommand: "gunicorn --timeout 120 Project.Parse.databaseAccess:app"
+    startCommand: "gunicorn --timeout 300 --workers 1 --bind 0.0.0.0:$PORT Project.Parse.databaseAccess:app"
     disk:
       name: chroma-data
       mountPath: /var/lib/chroma
