--- a/Project/Parse/requirements.txt
+++ b/Project/Parse/requirements.txt
@@ -4,11 +4,8 @@ chromadb==0.4.22
 google-genai==0.2.1
 python-dotenv==1.0.0
 requests==2.31.0
-dropbox==11.36.2
-pymupdf>=1.24.11
 gunicorn==21.2.0
-numpy>=1.26.4
+numpy>=1.26.4,<2.0.0
 httpx==0.26.0
 werkzeug==3.0.1
 psutil==5.9.8
-setuptools
